# auto-knuffel

./: Cargo.toml  index.html
.github/workflows/: ci.yml  demo-canon.yml
auto-knuffel-demo/: Cargo.toml
auto-knuffel-demo/src/: lib.rs
auto-knuffel-impl/: Cargo.toml
auto-knuffel-impl/src/: lib.rs
pkg/: auto_knuffel_demo.js  auto_knuffel_demo_bg.wasm
src/: lib.rs
